--- a/index.html
+++ b/index.html
@@ -5,22 +5,8 @@
   <title>River City Computers in Mechanicsville, VA</title>
 </head>
 <body>
-<pre>
-Used Parts Pricelist
 
-Part               Price
-------------------------
-        RAM
-Assorted DDR2 RAM     $5
-2GB DDR3 RAM          $10
+  <iframe src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT0cstwYsOh1Ph-r4nNR-ZslGdlbQVSxfYsqI7qRfE29QCfmVk809CM7rHU4YDPJ1OEoCAaYWEMZ1wI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
 
-     DISK DRIVES
-1TB HDD               $20
-
-   VIDEO CARDS (GPU)
-GTX 1050 2GB          $75
-GTX 1650 4GB          $130
-
-</pre>
 </body>
 </html>
