--- a/index.html
+++ b/index.html
@@ -18,7 +18,12 @@
 </head>
 <body>
   <div id="content">
-    <iframe width="100%" height="100%" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT0cstwYsOh1Ph-r4nNR-ZslGdlbQVSxfYsqI7qRfE29QCfmVk809CM7rHU4YDPJ1OEoCAaYWEMZ1wI/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false" />
+    <iframe 
+      width="100%" 
+      height="100%" 
+      frameborder="0" 
+      src="https://docs.google.com/spreadsheets/d/1pihtP0TU93SUBk0zFJpFZ0qCVxORHMzCxqYwqXh5wdY/edit?usp=sharing" 
+    />
   </div>
 </body>
 </html>
